Stock can't be deleted when used in carts |3rd|[11/8/2024]